# emsar

./: Makefile  Makefile.am  Makefile.in  Makefile.stringhash  README  README.md  VersionHistory  VersionHistory.old  config.status  configure  configure.ac  emsar-build  emsar_main.c  sam.c  sam.h  stringhash.h  temp.txt
autom4te.cache/: output.2  requests  traces.0  traces.1
doc/: EMSAR.documentation.v2.0.1.doc  README
samples/: Vicugna_pacos.vicPac1.72.cdna.all.g2t
src/: Makefile  Makefile.am  Makefile.in  alignment.h  bool.c  emsar  emsar-build  emsar.h  emsar_build_main.c  emsar_functions.c  emsar_functions.h  emsar_main.c  readgenerator  readgenerator.c  readgenerator.h  readgenerator_functions.c  stringhash.c  stringhash_test
src/.deps/: alignment.Po  bam.Po  bam_aux.Po  bam_import.Po  bgzf.Po  bool.Po  emsar_build_main.Po  emsar_functions.Po  emsar_main.Po  faidx.Po  kstring.Po  razf.Po  sam.Po  sam_header.Po  stringhash.Po
src/src/: alignment.c  bool.h  emsar
src/src/util/: FPKM2gFPKM.pl  post_processing.pl
src/util/: merge_gTPM.pl
util/: merge_gReadcount.pl  transcript_stats.3.pl
