AUTOMAKE_OPTIONS = foreign
CFLAGS = -Wall -O3
LIBS = -lpthread -lm -lz
bin_PROGRAMS = emsar emsar-build
emsar_SOURCES = emsar_main.c emsar_functions.c emsar.h alignment.c alignment.h stringhash.c stringhash.h bool.c bool.h sam.c faidx.c razf.c sam.h faidx.h razf.h bam.c bam.h bam_endian.h kstring.c kstring.h sam_header.c sam_header.h khash.h bgzf.c bgzf.h bam_import.c kseq.h bam_aux.c
emsar_build_SOURCES = emsar_build_main.c emsar_functions.c emsar.h alignment.c alignment.h stringhash.c stringhash.h bool.c bool.h sam.c faidx.c razf.c sam.h faidx.h razf.h bam.c bam.h bam_endian.h kstring.c kstring.h sam_header.c sam_header.h khash.h bgzf.c bgzf.h bam_import.c kseq.h bam_aux.c
